--- a/package.json
+++ b/package.json
@@ -46,11 +46,13 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
+        "date-fns": "^4.1.0",
         "globals": "^15.14.0",
         "laravel-vite-plugin": "^1.0",
         "lucide-react": "^0.475.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-icons": "^5.5.0",
         "react-qr-code": "^2.0.15",
         "react-toastify": "^11.0.5",
         "tailwind-merge": "^3.0.1",
