--- a/package.json
+++ b/package.json
@@ -4,23 +4,25 @@
     "scripts": {
         "build": "vite build",
         "build:ssr": "vite build && vite build --ssr",
-        "dev": "vite",
+        "dev": "vite ",
         "format": "prettier --write resources/",
         "format:check": "prettier --check resources/",
         "lint": "eslint . --fix",
         "types": "tsc --noEmit"
     },
     "devDependencies": {
-        "@eslint/js": "^9.19.0",
+        "@eslint/js": "^9.39.1",
         "@types/node": "^22.13.5",
-        "eslint": "^9.17.0",
+        "eslint": "^9.39.1",
         "eslint-config-prettier": "^10.0.1",
-        "eslint-plugin-react": "^7.37.3",
+        "eslint-plugin-react": "^7.37.5",
         "eslint-plugin-react-hooks": "^5.1.0",
+        "globals": "^16.5.0",
+        "jiti": "^2.6.1",
         "prettier": "^3.4.2",
         "prettier-plugin-organize-imports": "^4.1.0",
         "prettier-plugin-tailwindcss": "^0.6.11",
-        "typescript-eslint": "^8.23.0"
+        "typescript-eslint": "^8.46.4"
     },
     "dependencies": {
         "@ant-design/icons": "^6.0.0",
@@ -51,7 +53,6 @@
         "concurrently": "^9.0.1",
         "date-fns": "^4.1.0",
         "dayjs": "^1.11.13",
-        "globals": "^15.14.0",
         "laravel-vite-plugin": "^1.0",
         "lucide-react": "^0.475.0",
         "radix-ui": "^1.4.3",
